# algorithm_test

./: .gitignore  CMakeLists.txt
aplusb/: CMakeLists.txt  main.cpp
ascii_table/: example.cpp  table.cpp
ascii_table/include/ascii_table/: cell.h
rope/: CMakeLists.txt  main.cpp
rope/include/solutions/: avl.h  empty.h  splay.h  treap.h  verify.h
rope/include/tests/: build_insert_erase.h  build_long_struct.h  build_shuffle.h  insert_erase.h
segment_tree/: CMakeLists.txt  corr.cpp  main.cpp
segment_tree/include/solutions/: segment_tree_from_bottom.h  segment_tree_from_top.h
segment_tree/include/tests/: long_queries.h  random_test.h
speedtest/: CMakeLists.txt  speedtest.cpp
speedtest/include/speedtest/: runtime.h  speedtest.h
sufarray/: CMakeLists.txt  main.cpp  sa  sa.cpp
sufarray/include/solutions/: nlog2_hashes.h  nlogn.h
sufarray/include/tests/: ordered.h  random_str.h  reversed.h
table/: CMakeLists.txt  cell.cpp  column.cpp  example.cpp  table.cpp
table/include/: cell.h  column.h  table.h
